Split LoaderTest in ResolverTest and LoaderTest